--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"react": "^18.3.1",
+		"react-dice-roll": "^1.2.2",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
