--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 		"json-server": "json-server --watch db.json --port 3001"
 	},
 	"dependencies": {
+		"@types/jest": "^29.5.14",
 		"axios": "^1.7.7",
 		"classnames": "^2.5.1",
+		"jest": "^29.7.0",
 		"react": "^18.3.1",
 		"react-dice-roll": "^1.2.2",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"ts-jest": "^29.2.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.1.0",
